fix heasding icon margin-top on mobile

--- a/scss/_patterns_heading-icon.scss
+++ b/scss/_patterns_heading-icon.scss
@@ -27,6 +27,10 @@
       margin-top: -#{$spv-intra};
       width: map-get($icon-sizes, heading-icon--small);
 
+      @media (max-width: $breakpoint-medium) {
+        margin-top: 0;
+      }
+
       @media (min-width: $breakpoint-medium) {
         height: map-get($icon-sizes, heading-icon);
         width: map-get($icon-sizes, heading-icon);
